composer/Local/envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
            name: envoy.file_access_log
            config:
              path: /dev/stdout
              json_format: 
                proto: "%PROTOCOL%"
                code: "%RESPONSE_CODE%"
                route: "%ROUTE_NAME%"
                host: "%UPSTREAM_HOST%"
                cluster: "%UPSTREAM_CLUSTER%"
                path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/CoreSchema"
                route:
                  cluster: grpc
                  max_grpc_timeout: 0s
                  idle_timeout: 90s
              - match:
                  prefix: "/connect/"
                route:
                  cluster: back_http
              - match:
                  prefix: "/.well-known/"
                route:
                  cluster: back_http                  
              - match:
                  prefix: "/"
                route:
                  cluster: static

              cors:
                allow_origin_string_match:
                  exact: "http://envoy.docker"
                allow_methods: GET, PUT, DELETE, POST, PATCH, OPTIONS
                allow_headers: Authorization,authorization,keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                allow_credentials: true
                max_age: "1728000"
                expose_headers: custom-header-1,grpc-status,grpc-message
          http_filters:
          - name: envoy.grpc_web
          - name: envoy.cors
          - name: envoy.router
  clusters:
  - name: grpc
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    http2_protocol_options: {}
    lb_policy: ROUND_ROBIN
    hosts: [{ socket_address: { address: backend, port_value: 50051 }}]
  - name: back_http
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    hosts: [{ socket_address: { address: backend, port_value: 50052 }}]
  - name: static
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    hosts: [{ socket_address: { address: front, port_value: 80 }}]
